# zippyst

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
lib/: Cargo.toml
lib/page_payloads/: 2022_07_18.html  2022_07_23.html  2023_02_28.html
lib/src/: error.rs  file.rs  lib.rs
src/: error.rs  file.rs  info.rs  lib.rs  main.rs
