[package]
name = "zippyst"
version = "1.1.0"
authors = ["Scotow <contact@scotow.com>"]
edition = "2018"

[dependencies]
ureq = "0.12.1"
scraper = "0.11.0"
url = "2.1.0"
regex = "1"
percent-encoding = "2.1.0"
minicalc = { git = "https://github.com/irevoire/minicalc" }
smol = "0.1.4"
futures = "0.3.5"
