[package]
name = "zippyst"
version = "2.0.0"
authors = ["Scotow <contact@scotow.com>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14.16", features = ["client", "http1"] }
scraper = "0.11.0"
url = "2.1.0"
regex = "1.5.4"
percent-encoding = "2.1.0"
futures = "0.3.5"
tinyexpr = "0.1.1"
hyper-tls = "0.5.0"
tokio = {version = "1.15.0", default-features = false, features = ["macros", "rt"] }
thiserror = "1.0.30"
lazy_static = "1.4.0"
