[package]
name = "zippyst"
version = "2.0.1"
authors = ["Scotow <contact@scotow.com>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/scotow/zippyst"
homepage = "https://github.com/scotow/zippyst"
description = "Resolve zippyshare.com download links"
categories = ["asynchronous", "web-programming"]
keywords = ["zippyshare", "download", "non-blocking"]

[dependencies]
thiserror = "1.0.30"
url = "2.1.0"
lazy_static = "1.4.0"
regex = "1.5.4"
scraper = "0.11.0"
tinyexpr = "0.1.1"
percent-encoding = "2.1.0"
hyper = { version = "0.14.16", features = ["client", "http1"], optional = true }
hyper-tls = { version = "0.5.0", optional = true }

[dev-dependencies]
tokio = { version = "1.15.0", default-features = false, features = ["macros", "rt"] }
md5 = "0.7.0"

[features]
fetch = ["hyper", "hyper-tls"]

[package.metadata.docs.rs]
all-features = true
