[package]
name = "zippyst"
version = "4.0.1"
authors = ["Scotow <contact@scotow.com>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/scotow/zippyst"
homepage = "https://github.com/scotow/zippyst"
description = "Resolve zippyshare.com download links"
categories = ["asynchronous", "web-programming"]
keywords = ["zippyshare", "download", "non-blocking"]

[dependencies]
thiserror = "1.0.30"
lazy_static = "1.4.0"
regex = "1.5.5"
Boa = "0.13.0"
percent-encoding = "2.1.0"
http = "0.2.6"
hyper = { version = "0.14.16", features = ["client", "http1"], optional = true }
hyper-tls = { version = "0.5.0", optional = true }

[dev-dependencies]
tokio = { version = "1.20.4", default-features = false, features = ["macros", "rt"] }
md5 = "0.7.0"

[features]
fetch = ["hyper", "hyper-tls"]

[package.metadata.docs.rs]
all-features = true
